--- a/client/package.json
+++ b/client/package.json
@@ -11,13 +11,15 @@
 	},
 	"dependencies": {
 		"@craco/craco": "^6.4.2",
-		"@emotion/react": "^11.7.0",
-		"@emotion/styled": "^11.6.0",
-		"@mui/material": "^5.2.2",
+		"@mantine/core": "^3.6.7",
+		"@mantine/hooks": "^3.6.7",
+		"@mantine/notifications": "^3.6.7",
+		"@radix-ui/react-icons": "^1.0.3",
 		"@testing-library/jest-dom": "^5.11.4",
 		"@testing-library/react": "^11.1.0",
 		"@testing-library/user-event": "^12.1.10",
 		"axios": "^0.24.0",
+		"fuse.js": "^6.5.3",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-input-autosize": "^3.0.0",
