--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
 		"framer-motion": "^6.2.6",
 		"fuse.js": "^6.5.3",
 		"react": "^17.0.2",
+		"react-countup": "^6.1.1",
 		"react-dom": "^17.0.2",
 		"react-input-autosize": "^3.0.0",
 		"react-router-dom": "^6.0.2",
