--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
 		"https-proxy-agent": "^5.0.0",
 		"mongodb": "^4.3.1",
 		"morgan": "^1.10.0",
+		"music-metadata": "^7.11.8",
 		"typescript": "^4.5.5",
 		"yt-channel-info": "^3.0.0",
 		"yt-dlp-wrap": "^2.3.11"
