--- a/package.json
+++ b/package.json
@@ -1,16 +1,33 @@
 {
-	"name": "bhop-archiver",
+	"name": "server",
+	"main": "src/index.ts",
 	"private": true,
 	"scripts": {
-		"start:server": "cd server && yarn start",
-		"start:client": "cd client && yarn start",
-		"dev:server": "cd server && yarn run dev",
-		"start": "concurrently \"yarn start:server\" \"yarn start:client\"",
-		"dev": "concurrently \"yarn dev:server\" \"yarn start:client\""
+		"dev": "ts-node-dev .",
+		"start": "ts-node .",
+		"build": "tsc"
 	},
 	"dependencies": {
-		"concurrently": "^6.4.0",
-		"ts-node": "^10.4.0",
-		"typescript": "^4.5.2"
+		"dotenv": "^16.0.0",
+		"express": "^4.17.2",
+		"express-async-errors": "^3.1.1",
+		"express-validator": "^6.14.0",
+		"express-ws": "^5.0.2",
+		"fs-extra": "^10.0.0",
+		"helmet": "^5.0.2",
+		"https-proxy-agent": "^5.0.0",
+		"mongodb": "^4.3.1",
+		"morgan": "^1.10.0",
+		"music-metadata": "^7.11.8",
+		"typescript": "^4.5.5",
+		"yt-channel-info": "^3.0.0",
+		"yt-dlp-wrap": "^2.3.11"
+	},
+	"devDependencies": {
+		"@types/express": "^4.17.13",
+		"@types/express-ws": "^3.0.1",
+		"@types/fs-extra": "^9.0.13",
+		"@types/morgan": "^1.9.3",
+		"@types/node": "^17.0.17"
 	}
 }
