--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
 		"music-metadata": "^7.11.8",
 		"typescript": "^4.5.5",
 		"yt-channel-info": "^3.0.0",
-		"yt-dlp-wrap": "^2.3.11"
+		"yt-dlp-wrap": "^2.3.11",
+		"ytpl": "^2.3.0"
 	},
 	"devDependencies": {
 		"@types/express": "^4.17.13",
