--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"build": "tsc"
 	},
 	"dependencies": {
+		"csv-string": "^4.1.0",
 		"dotenv": "^16.0.0",
 		"express": "^4.17.2",
 		"express-async-errors": "^3.1.1",
@@ -29,6 +30,7 @@
 		"@types/express-ws": "^3.0.1",
 		"@types/fs-extra": "^9.0.13",
 		"@types/morgan": "^1.9.3",
-		"@types/node": "^17.0.17"
+		"@types/node": "^17.0.17",
+		"ts-node-dev": "^2.0.0"
 	}
 }
